Fixed horizontal scrollbar.
Due to wild grid in the nav bar.

Now that it is properly done, it has a default padding for us, no need
for the custom margin-top anymore.

--- a/client/stylesheets/base.css
+++ b/client/stylesheets/base.css
@@ -7,7 +7,3 @@ body {
   font-family: 'Open Sans', sans-serif;
   margin-bottom: 60px;
 }
-
-.ui.grid.main {
-  margin-top: 70px;
-}
